# terminal-ai-chatbot

./: .gitignore  ARCHITECTURE.md  README.md  app.py  chat_logic.py  config.json  config.py  main.py  menu.py  models_cache.py  pyproject.toml  settings.py
chats/: chat_2026-06-11_21-58-49.json  chat_2026-06-11_22-07-02.json
src/terminal_ai_chatbot/: __main__.py  actions.py  api.py  app.py  chat_logic.py  layout.py  models_cache.py  settings.py  tokens.py
src/terminal_ai_chatbot/widgets/: __init__.py  dialogs.py
tests/: test_chat_logic.py  test_config.py  test_models_cache.py  test_tokens.py
