[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-ai-chatbot"
version = "0.1.0"
description = "Terminal AI Chatbot with Textual UI"
requires-python = ">=3.8"
dependencies = [
    "textual",
    "requests",
    "python-dotenv",
    "rich",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["terminal_ai_chatbot*"]

[tool.setuptools.package-dir]
"" = "src"